fix for double scroll bars

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -15,8 +15,8 @@
     overflow: hidden;
     /*to enable touch scrolling on mobile*/
     -webkit-overflow-scrolling: touch;
-    overflow-y: scroll;
-    overflow-x: scroll;
+    overflow-y: hidden;
+    overflow-x: hidden;
 
     iframe {
         position: absolute;
@@ -25,8 +25,17 @@
         width: 100%;
         height: 100%;
         border: none;
+
+        html, body {
+            width: 100%;
+            height: 100%;
+            padding: 0;
+            margin: 0;
+        }
     }
 }
+
+
 
 .jumbotron {
     background-image: url("../images/code-banner.png");
